pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: serviceebusinessonline
  name: serviceebusinessonline
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: serviceebusinessonline
    weight: 100
